--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,14 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -76,6 +76,8 @@ p {
 }
 
 .benefits {
+    text-align: center;
+    margin-bottom: 20px;
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -86,7 +88,9 @@ p {
     background-color: #2589bd;
 }
 
+
 .benefit-lead {
+    margin-top: 15px;
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -188,13 +192,13 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
