--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,17 +4,18 @@
     margin: 0;
 }
 
+/* This section is the background colour for the body */
 body {
     background-color: #d9dcd6;
 }
-
+/* This section is the styling for the header section */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/* This section is the styling for the header's main title*/
 header h1 {
     display: inline-block;
     font-size: 48px;
@@ -23,7 +24,7 @@ header h1 {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
+/* This section is the styling for the navigation section in th header*/
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -191,14 +192,14 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* This section is the styling for the footer section */
 footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
+/* This section is the styling for the heading in the footer */
 footer h2 {
     font-size: 20px;
 }
